kubernetes/apps/paperless/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paperless
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: envoy
          gateway.envoyproxy.io/owning-gateway-name: envoy-proxy
    ports:
    - port: 8000
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 0.0.0.0/8
        - 10.0.0.0/8
        - 100.64.0.0/10
        - 127.0.0.0/8
        - 169.254.0.0/16
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 224.0.0.0/4
        - 240.0.0.0/4
    - ipBlock:
        cidr: 2000::/3
        except:
        - 2a13:e747:b7be::/48
    ports:
    - port: 443
      protocol: TCP
